welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value green
      if(getCouleurSol() == green){
                            ^